Fix Hero section text h1 multilines with  flex issue on firefox

--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -1,4 +1,10 @@
 .hero-section {
+  .section-text__left {
+    @include tablet-sm {
+      flex: 1.1;
+      margin-bottom: 0;
+    }
+  }
   .hero-img {
     width: 100%;
     position: relative;
